--- a/app/src/main/res/layout/game_interface.xml
+++ b/app/src/main/res/layout/game_interface.xml
@@ -1,6 +1,6 @@
 <?xml version="1.0" encoding="utf-8"?>
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
-    android:id="@+id/main"
+    android:id="@+id/gameInterface"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:background="#000000"
