Avoided the hard coded string of "Run Test" inside the button by modifying strings.xml.

--- a/app/src/main/res/layout/game_state_test.xml
+++ b/app/src/main/res/layout/game_state_test.xml
@@ -20,6 +20,5 @@
         android:layout_height="wrap_content"
         android:layout_weight="1"
         android:gravity="center"
-        android:text="Run Test" />
-
+        android:text="@string/run_test" />
 </LinearLayout>
