--- a/app/src/main/res/layout/game_interface.xml
+++ b/app/src/main/res/layout/game_interface.xml
@@ -3,7 +3,7 @@
     android:id="@+id/gameInterface"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:background="#000000"
+    android:background="#FFFFFF"
     android:orientation="horizontal">
 
     <LinearLayout
@@ -27,7 +27,7 @@
                 android:id="@+id/tvWelcome"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:text="Shogi"
+                android:text="@string/game_name"
                 android:textAllCaps="false"
                 android:textSize="40sp"
                 android:textStyle="bold|italic" />
@@ -37,9 +37,22 @@
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:layout_marginTop="20dp"
-                android:text="English/Japanese"
+                android:text="@string/language"
                 android:textColor="#797171"
                 android:textSize="16sp" />
+
+            <TextView
+                android:id="@+id/currentPlayerBar"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:textColor="#797171"
+                android:text="@string/currentTurn" />
+
+            <TextView
+                android:id="@+id/setCurrPlayer"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:text="@string/currTurnBar" />
 
         </LinearLayout>
 
@@ -54,7 +67,7 @@
                 android:id="@+id/butQuit"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:text="Quit"
+                android:text="@string/quit"
                 android:textSize="20sp" />
         </LinearLayout>
 
@@ -97,17 +110,6 @@
                 android:textAlignment="center"
                 android:textSize="30sp" />
 
-            <TextView
-                android:id="@+id/tvP2time"
-                android:layout_width="match_parent"
-                android:layout_height="wrap_content"
-                android:layout_weight="0"
-                android:background="#80FFFFFF"
-                android:text="29:48"
-                android:textAlignment="center"
-                android:textSize="30sp"
-                android:textStyle="bold" />
-
         </LinearLayout>
 
         <LinearLayout
@@ -119,19 +121,11 @@
             android:orientation="vertical">
 
             <TextView
-                android:id="@+id/tvP1time"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:layout_weight="0"
-                android:text="29:08"
-                android:textSize="30sp"
-                android:textStyle="bold" />
-
-            <TextView
                 android:id="@+id/tvP1"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:layout_weight="0"
+                android:background="#80FFFFFF"
                 android:text="Player 1"
                 android:textSize="30sp" />
 
