--- a/app/src/main/res/layout/game_interface.xml
+++ b/app/src/main/res/layout/game_interface.xml
@@ -46,12 +46,14 @@
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:textColor="#797171"
+                android:textSize="18sp"
                 android:text="@string/currentTurn" />
 
             <TextView
                 android:id="@+id/setCurrPlayer"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
+                android:textSize="18sp"
                 android:text="@string/currTurnBar" />
 
         </LinearLayout>
